Closed Bug 577894 Opened 14 years ago Closed 14 years ago

nsOggReader::SeekBisection doesn't need old_offset_end/old_offset_start

Categories

(Core :: Audio/Video, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

Details

Attachments

(1 file)

this is part of a crusade to get rid of compilation warnings
Attached patch patchSplinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #456721 - Flags: review?(chris.double)
Comment on attachment 456721 [details] [diff] [review]
patch

Looks fine to me but I've changed reviewer to Chris Pearce since he wrote the code.
Attachment #456721 - Flags: review?(chris.double) → review?(chris)
Attachment #456721 - Flags: review?(chris) → review+
http://hg.mozilla.org/mozilla-central/rev/89204945b81f oops, reviewer was wrong, sorry
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: