Bug 577894 nsOggReader::SeekBisection doesn't need old_offset_end/old_offset_start r=doublec

--HG--
extra : rebase_source : 27fd73730b78e21a154873536dae97fc81c8bf5b